<resources>
    <string name="app_name">Writer Recognition App</string>
    <string name="title_1">Enter the writers</string>
    <string name="new_writer">New Writer</string>
    <string name="continue_">Continue</string>
    <string name="WARNING">WARNING</string>
    <string name="continue_modal_1">There\'s no going back if you continue, are you sure you want to continue?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="writers_key">writers_key</string>
    <string name="title_2">Enter the Test Image</string>
    <string name="test_btn">Test Image</string>
    <string name="test_all_btn">Analyze</string>
    <string name="analyze_images_message">Continuing you will start processing the data and you will not be able to go back, are you sure you want to continue?</string>
    <string name="result_message">The writer of the test image is:</string>
    <string name="file_path_key">FILE_PATH</string>
    <string name="analyze_images_accuracy">The probability of the correctness of the result is:</string>
    <string name="content_description">Content Description</string>
    <string name="creator">Project: Francesco Nicolò Giacomazzo</string>
    <string name="supervisor">Supervisor: Massimo Orazio Spata</string>
    <string name="department">Department of Mathematics and Computer Science</string>
    <string name="add_name">Enter writer name</string>
    <string name="error_500">We were unable to correctly locate the text in all images. Please try again by improving the image quality.</string>
</resources>