<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    tools:context="com.unict.writerrecognitionapp.activities.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/handwriting"
            android:scaleType="fitCenter"/>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/writer_recognition_title"
            android:scaleType="fitCenter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="280dp"
            android:layout_height="180dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/unict_logo_nero"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creator"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supervisor"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>