<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="43sp"
        android:padding="0dp"
        android:textStyle="bold"
        android:text="@string/title_1"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_writers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="8"
        android:backgroundTint="@color/main_color"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_writer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9" />

            <Button
                android:id="@+id/add_writer_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/main_color_border"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/new_writer"
                android:textSize="24sp"
                android:drawableEnd="@drawable/ic_baseline_add_24"
                app:cornerRadius="30dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:text="@string/continue_"
        android:background="@drawable/success_color_background"
        android:layout_marginBottom="4dp"
        android:padding="8dp"
        android:textSize="24sp"
        android:enabled="false"/>

</LinearLayout>

