<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/title_2"
        android:textColor="@color/black"
        android:textSize="43sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/main_color"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/test_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/main_color_border"
                android:drawableEnd="@drawable/ic_baseline_add_24"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/test_btn"
                android:textSize="24sp"
                app:cornerRadius="30dp" />

            <LinearLayout
                android:id="@+id/test_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/text_view_test"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/test_show_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/content_description"
                    android:focusable="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_eye_white_24" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:text="@string/test_all_btn"
        android:background="@drawable/success_color_background"
        android:layout_marginBottom="4dp"
        android:padding="50dp"
        android:enabled="false"
        android:textSize="24sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>